--- a/.github/workflows/master_controles08.yml
+++ b/.github/workflows/master_controles08.yml
@@ -33,7 +33,7 @@ jobs:
         run: dotnet tool install -g dotnet-ef
 
       - name: dotnet bundle migration
-        run: dotnet ef migrations bundle --runtime linux-x64 -p controles08-database/controles08-database.csproj -o \${{env.DOTNET_ROOT}}/myapp/migrate
+        run: dotnet ef migrations bundle --runtime linux-x64 -p Controles08/Controles08.csproj -o \${{env.DOTNET_ROOT}}/myapp/migrate
         
 
       - name: Upload artifact for deployment job
