--- a/.github/workflows/master_controles08.yml
+++ b/.github/workflows/master_controles08.yml
@@ -32,7 +32,7 @@ jobs:
         run: dotnet tool install -g dotnet -ef
 
       - name: dotnet bundle migration
-        run: dotnet ef migrations bundle --runtime linux-x64 -p Controles08/Controles08.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
+        run: dotnet ef migrations bundle --runtime linux-x64 -p Controles08/Controles08.csproj -o \${{env.DOTNET_ROOT}}/myapp/migrate
       
 
 
@@ -62,5 +62,5 @@ jobs:
         with:
           app-name: 'Controles08'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F73D55873DC840EC8045F121DA7FCF01 }}
+          publish-profile: ${{secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F73D55873DC840EC8045F121DA7FCF01}}
           package: .
